[project]
name = "incoming-damage-timeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "plotly[express]>=6.5.0",
    "polars>=1.36.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
